# Folder-Sorter

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  uninstall.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CLI_REFERENCE.md  TECH_DETAILS.md
folder-sorter-web/: package-lock.json  package.json
folder-sorter-web/public/: install.ps1  install.sh  uninstall.sh
folder-sorter-web/src/app/: globals.css  layout.tsx  page.tsx
folder-sorter-web/src/app/components/: Footer.tsx  Navbar.tsx
folder-sorter-web/src/app/docs/: page.tsx
folder-sorter-web/src/app/install/: page.tsx
folder-sorter-web/src/app/roadmap/: page.tsx
folder_sorter/: categories.py  config.py  date_sorter.py  doctor.py  main.py  sorter.py  undo.py  utils.py
tests/: conftest.py  test_categories.py  test_config.py  test_date_sorter.py  test_doctor.py  test_main.py  test_sorter.py  test_undo.py
