[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folder-sorter"
version = "1.0.3"
description = "A professional cross-platform CLI tool to organize folders with ease."
readme = "README.md"
authors = [
    { name = "Developer" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pillow>=10.0.0"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.6.0"
]


[project.scripts]
folder-sorter = "folder_sorter.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["folder_sorter*"]